# autoware.universe

common/autoware_motion_utils/include/autoware/motion_utils/resample/: resample_utils.hpp
common/autoware_motion_utils/include/autoware/motion_utils/trajectory/: trajectory.hpp
common/autoware_universe_utils/: CMakeLists.txt
control/autoware_operation_mode_transition_manager/launch/: operation_mode_transition_manager.launch.xml
control/autoware_vehicle_cmd_gate/launch/: vehicle_cmd_gate.launch.xml
launch/tier4_control_launch/launch/: control.launch.py  control.launch.xml
launch/tier4_planning_launch/launch/scenario_planning/: lane_driving.launch.xml  scenario_planning.launch.xml
launch/tier4_planning_launch/launch/scenario_planning/lane_driving/behavior_planning/: behavior_planning.launch.py  (+1 more)
planning/autoware_mission_planner/src/lanelet2_plugins/: default_planner.cpp  default_planner.hpp
planning/behavior_path_planner/autoware_behavior_path_lane_change_module/: package.xml
planning/behavior_path_planner/autoware_behavior_path_lane_change_module/src/utils/: utils.cpp
planning/behavior_path_start_planner_module/config/: start_planner.param.yaml
planning/behavior_path_start_planner_module/src/: manager.cpp
planning/potential_fields/: CMakeLists.txt  package.xml
planning/potential_fields/include/potential_fields/: apf_curve_road.hpp  node.hpp  potential_fields.hpp
planning/potential_fields/launch/: potential_fields.xml
planning/potential_fields/src/: node.cpp
planning/sampling_based_planner/autoware_bezier_sampler/src/: bezier_sampling.cpp
(+2 files in other folders)
